...
        android:text="Pomodoro"
        android:textSize="36dp">

    </TextView>

    <TextView
        android:id="@+id/numPomodorosText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step2Title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Pomodoros in this session: 1"
        android:textSize="18dp">

    </TextView>

    <TextView
        android:id="@+id/LabelProject"
...
        android:text="Click Start To Start Pomodoro"
        android:textSize="18dp">

    </TextView>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
...
        android:onClick="stopPomodoro"
        android:text="Stop Pomodoro">

    </Button>

    <Button
        android:id="@+id/startPomodoroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
...
